Added test cases for Testrail event subscriber